--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css">
     <title>Dino Game</title>
   </head>
   <body>
@@ -14,5 +13,6 @@
       <div id="scoreText"> </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
+    <link rel="stylesheet" href="/src/style.css">
   </body>
 </html>
