edited image urls

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
       <div id="scoreText"> </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
-    <link rel="stylesheet" href="/src/style.css">
+    <link rel="stylesheet" href="/src/style.css"></link>
   </body>
 </html>
